Add a few more slides on other findings that were made

--- a/index.mdx
+++ b/index.mdx
@@ -9,15 +9,16 @@ export { yellow as theme } from 'mdx-deck/themes'
 
 ## Long Live the Queen
 
----
-
-## Overview
-
 <Notes>
-  Tell audience about how bees are a great example of epigenetics in the wild.
 
-Presentation will start with a brief review on bees, then go into
-more interesting bits around how epigenetics plays a role.
+Chapter focuses on honey bees and how research on them
+have uncovered some interesting information on
+how diet can play a large role on development
+and epigenetics can vary across species.
+
+Presentation will start with a brief review on bees,
+then go into some of the research done on them and what
+that research uncovered.
 
 </Notes>
 
@@ -34,7 +35,8 @@ Have colonies with different social roles
 - The Queen
 
 <Notes>
-  Quick overview of bees here.
+
+Quick overview of bees here.
 
 Worker bees collect pollen and nectar. They make wax.
 
@@ -57,9 +59,10 @@ Make note that the queen is quite different and lead into next slide.
   only live a few months.
 
 <Notes>
-  Because queens mate several times, not all bees are
-  genetically identical to each other, but in a colony
-  thousands of them can be.
+
+Because queens mate several times, not all bees are
+genetically identical to each other, but in a colony
+thousands of them can be.
 
 Make note that the queen is interesting because it's quite different from
 the others (larger, only female that can mate).
@@ -72,6 +75,13 @@ on the season they were born.
 ---
 
 <img src="./assets/but_y_tho.gif" />
+
+<Notes>
+
+Despite being genetically identical to other workers,
+why is the queen different?
+
+</Notes>
 
 ---
 
@@ -103,8 +113,9 @@ The others remain on the royal jelly diet and grow up to become queens.
 <img src="./assets/queen_bee.jpg" style={{ maxHeight: '500px' }} />
 
 <Notes>
-  The new queens eventually leave the hive with drones and workers to start a
-  new colony.
+
+The new queens eventually leave the hive with drones
+and workers to start a new colony.
 
 Not quite sure what exactly causes nurse bees to continue feeding royal
 jelly to a select few.
@@ -113,9 +124,13 @@ jelly to a select few.
 
 ---
 
-## Epigenetics, duh
+<img src="./assets/but_y_tho.gif" />
 
-<Notes>lol</Notes>
+<Notes>
+
+But why does the prolonged jelly diet make them queens?
+
+</Notes>
 
 ---
 
@@ -123,15 +138,17 @@ jelly to a select few.
 
 - Some researchers decided to sequence the genomes of honey bees.
 - Found that the genome contained genes that looked
-similar to DNA methyltransferase genes of higher organisms.
+  similar to DNA methyltransferase genes of higher organisms.
 - Genome showed to contain a lot of CpG motifs.
 
 <Notes>
+
 This provides evidence that honeybees may possess a DNA methylation system.
 
 DNA methyltransferase - enzymes that catalyze the transfer
 of a methyl group from S-Adenosyl methionine. These enzymes are required for
 the establishment and maintenance of DNA methylation patterns
+
 </Notes>
 
 ---
@@ -139,18 +156,20 @@ the establishment and maintenance of DNA methylation patterns
 ## More research back in 2006
 
 - Research group led by Gene Robinson in Illinois found that
-DNA methyltransferase proteins encoded in the genome were active.
+  DNA methyltransferase proteins encoded in the genome were active.
 - Proteins were able to add methyl groups to the cytosine
-residue in a CpG motif.
+  residue in a CpG motif.
 - There were also proteins expressed that were able to bind to methylated DNA.
 
 <Notes>
+
 Together, this shows that cells could both read and write epigenetic code.
 
-Before this data was publishd, no one thought to
+Before this data was published, no one thought to
 check if honey bees they had a DNA methylation system
 because everyone kind of thought that it would be similar to the fruit fly
 `Drosophila melanogaster`
+
 </Notes>
 
 ---
@@ -164,6 +183,7 @@ they could create queen bees without prolonged feeding with royal jelly.
 <img src="./assets/dmnt3_and_bees.png" style={{ maxHeight: '500px' }} />
 
 <Notes>
+
 `Dnmt3` is responsible for adding methyl groups to regions of DNA that
 haven't been methylated before.
 
@@ -176,6 +196,7 @@ The researchers also examined the DNA methylation and gene expression patterns
 in different experimental groups of bees to back up the hypothesis
 and found that the methylation patterns between natural queen bees and
 the knockdown queen bees were very similar.
+
 </Notes>
 
 ---
@@ -186,38 +207,126 @@ No one has been able demonstrate that royal jelly really inhibits the
 DNA methyltransferase enzyme, it's possible that the
 effect of royal jelly on DNA methylation is indirect.
 
-<Notes>
-No one knows what exactly is causing the enzyme to be inhibited.
-</Notes>
+<Notes>No one knows what exactly is causing the enzyme to be inhibited.</Notes>
 
 ---
 
 ## What we do know
 
 - Royal jelly does influence on hormonal signalling in honey bees
-and this changes gene expression patterns.
+  and this changes gene expression patterns.
 - Changes in the levels of expressions of a gene influence the
-epigenetic modifications.
+  epigenetic modifications.
 - The more highly a gene is switched on, the more it's histones can be
-modified in ways that promote gene expression.
+  modified in ways that promote gene expression.
 
 <Notes>
+
 Something similar may be happening for honeybees.
 
 DNA methylation systems and histone modification systems often work together.
 This his stirred up interest in the role of histone modifying enzymes in
 the control of honeybee development.
 
+4 histone deacetylase enzymes were identified in the honeybee genome.
+
+It was known for some time that royal jelly contains a compound
+called `phenyl butyrate`.
+
 </Notes>
 
 ---
 
-# TODO
+## 10HDA and SAHA
 
-- Talk about research on compound found in in royal jelly
-- the other effects of methylation in bees
-- other places where there are similar effects seen in other insect species
-- close
+<img src="./assets/10hda_and_saha.png" style={{ maxHeight: '300px' }} />
+
+In 2011, a group led by Dr. Mark Bedford from the MD Anderson Cancer Center
+in Houston published a study on royal jelly.
+
+Found that it contained compound called `10HDA`
+(_(E)-10-hydroxy-2-decnoic acid_).
+
+The structure is similar to another compound known as `SAHA`,
+a histone deacetylase inhibitor.
+
+<Notes>
+Structures aren't identical.
+
+SAHA is licensed for the treatment of cancer
+
+Researchers hypothesized that 10HDA may be an inhibitor of histone deacetylases.
+After a number of experiments, it was found that this is indeed the case.
+
+</Notes>
+
+---
+
+<img src="./assets/more_royal_jelly.jpg" style={{ maxHeight: '500px' }} />
+
+This stuff inhibits a key class of epigenetic enzymes.
+
+<Notes>
+
+Royal jelly has a history being used as a health supplement.
+
+It was discovered that `10HDA` compound (that Mark Bedford's group found)
+can affect the growth of blood vessel cells.
+
+Theoretically, this can be useful in cancer since tumors rely
+in a good blood supply for growth.
+
+But we a very long way from showing that royal jelly can actually
+fight off cancer or provide any health benefits.
+
+</Notes>
+
+---
+
+## Other epigenetic influences
+
+- It was found that levels of `Dnmt3` protein go up in parts
+  of the honeybee's brain which are important to learning.
+- Inhibition of `Dmnt3` alters memory retention and causes bees to
+  forget things faster.
+
+<Notes>
+Dr. Ryszard Maleszka's group
+(going back to the group that found that the `Dmnt3`)
+found that it was possible to train honeybees to respond to certain
+stimuli associted with food.
+
+Unclear which genes become methylated when honey bees learn and
+acquire new memories.
+
+</Notes>
+
+---
+
+## How does this relate to us?
+
+- DNA methylation is associated with alterations in developmental
+  processes for both humans and honeybees.
+- DNA methylation also plays a role in the brain during memory processing.
+
+<Notes>
+
+However there are differences... (next slide)
+
+</Notes>
+
+---
+
+## Differences in how DNA methylation is used
+
+In mammals, DNA methylation tends to be associated with switching
+off gene expression and shutting down dangerous elements that
+might cause problems.
+
+In honeybees, it tends to act as a fine tuning mechanism,
+modulating the activity of genes.
+
+Humans and bees are not the same epigenetically.
 
 ---
 
