Addressed some feedback on some later slides

--- a/index.mdx
+++ b/index.mdx
@@ -149,6 +149,16 @@ DNA methyltransferase - enzymes that catalyze the transfer
 of a methyl group from S-Adenosyl methionine. These enzymes are required for
 the establishment and maintenance of DNA methylation patterns
 
+CpG motifs (CpG patterns)
+
+`cytosine triphosphate deoxynucleotide` ("C")
+followed by a `guanine triphosphate deoxynucleotide` ("G").
+The "p" refers to the `phosphodiester` link between consecutive nucleotides.
+
+Cytosines can be methylated and turn off gene expression.
+
+Potential evidence that bees have a dna methylation system?
+
 </Notes>
 
 ---
@@ -192,6 +202,11 @@ Because knocking down `Dnmt3` had the same effects of feedling royal jelly.
 This suggests that royal jelly is connected to alterations of the
 DNA methylation patterns on important genes.
 
+If Dnmt3 is suppressed by royal jelly there is less methylation in the queen.
+Methylation generally turns off expression of genes. So the royal
+jelly is likely allowing some genes to stay turned on to develop into
+a queen and when those genes are turned off by methylation they become workers.
+
 The researchers also examined the DNA methylation and gene expression patterns
 in different experimental groups of bees to back up the hypothesis
 and found that the methylation patterns between natural queen bees and
@@ -215,10 +230,9 @@ effect of royal jelly on DNA methylation is indirect.
 
 - Royal jelly does influence on hormonal signalling in honey bees
   and this changes gene expression patterns.
-- Changes in the levels of expressions of a gene influence the
-  epigenetic modifications.
-- The more highly a gene is switched on, the more it's histones can be
-  modified in ways that promote gene expression.
+- Epigenetic modifications influence the expression of a gene
+- Histones can be modified to promote gene expression,
+leading genes to be turned on.
 
 <Notes>
 
@@ -230,8 +244,9 @@ the control of honeybee development.
 
 4 histone deacetylase enzymes were identified in the honeybee genome.
 
-It was known for some time that royal jelly contains a compound
-called `phenyl butyrate`.
+Interesting because, it was known for some time that royal jelly contains a
+compound called `phenyl butyrate`. It was known that this can
+inhibit histone deacetylases but does it weakly.
 
 </Notes>
 
@@ -257,6 +272,12 @@ SAHA is licensed for the treatment of cancer
 
 Researchers hypothesized that 10HDA may be an inhibitor of histone deacetylases.
 After a number of experiments, it was found that this is indeed the case.
+
+Acetylation makes the DNA be less tightly wound around the histones
+and turns on gene expression. deacetylation does the opposite,
+by removing the acetyl groups the DNA is wound tighter
+and expression is turned off.
+
 
 </Notes>
 
@@ -330,6 +351,7 @@ Humans and bees are not the same epigenetically.
 
 ---
 
-Shoutout to Doryan for switching spots with me.
+Shoutout to Doryan for switching spots with me
+and Steve for the helpful feedback.
 
 https://epigenetics-revolution-ch-14-deck.charlieduong94.now.sh
