Minor note updates

--- a/index.mdx
+++ b/index.mdx
@@ -266,6 +266,7 @@ The structure is similar to another compound known as `SAHA`,
 a histone deacetylase inhibitor.
 
 <Notes>
+
 Structures aren't identical.
 
 SAHA is licensed for the treatment of cancer
@@ -312,8 +313,9 @@ fight off cancer or provide any health benefits.
   forget things faster.
 
 <Notes>
+
+(going back to the group that found that the `Dmnt3` can be turned off)
 Dr. Ryszard Maleszka's group
-(going back to the group that found that the `Dmnt3`)
 found that it was possible to train honeybees to respond to certain
 stimuli associted with food.
 
